swimgoals_frontend/src/app/styles/BackgroundImage.scss
@use 'variables';

.container {
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    height: 100vh;
    width: 100%;
    color: variables.$white;
    text-align: variables.$text-center;
    font-family: variables.$global-font-family;

    &.auth {
        background: variables.$image-background-desktop;
    }

    &.blur {
        background: variables.$image-background-blur;
    }
}

